--- a/_config.yml
+++ b/_config.yml
@@ -211,11 +211,18 @@ whitelist:
 #  - <base_path/categories/my-awesome-category/index.html ~> path: /categories/
 #  - <base_path/my-awesome-category/index.html ~> path: /
 tag_archive:
-  type: jekyll-archives
+  type: liquid
   path: /tags/
 category_archive:
-  type: jekyll-archives
-  path: /
+  type: liquid
+  path: /categories/
+
+# tag_archive:
+#   type: jekyll-archives
+#   path: /tags/
+# category_archive:
+#   type: jekyll-archives
+#   path: /
 # # https://github.com/jekyll/jekyll-archives
 # jekyll-archives:
 #   enabled:
