--- a/_config.yml
+++ b/_config.yml
@@ -236,16 +236,16 @@ category_archive:
 # tag_archive:
 #   type: jekyll-archives
 #   path: /tags/
-jekyll-archives:
-  enabled:
-    - categories
-    - tags
-  layouts:
-    category: archive-taxonomy
-    tag: archive-taxonomy
-  permalinks:
-    category: /:name/
-    tag: /tags/:name/
+# jekyll-archives:
+#   enabled:
+#     - categories
+#     - tags
+#   layouts:
+#     category: archive-taxonomy
+#     tag: archive-taxonomy
+#   permalinks:
+#     category: /:name/
+#     tag: /tags/:name/
 
 
 # HTML Compression
