switch to liquid finally

--- a/_config.yml
+++ b/_config.yml
@@ -210,29 +210,29 @@ whitelist:
 #  - <base_path>/tags/my-awesome-tag/index.html ~> path: /tags/
 #  - <base_path/categories/my-awesome-category/index.html ~> path: /categories/
 #  - <base_path/my-awesome-category/index.html ~> path: /
-# tag_archive:
-#   type: liquid
-#   path: /tags/
-# category_archive:
-#   type: liquid
-#   path: /categories/
-
 tag_archive:
-  type: jekyll-archives
+  type: liquid
   path: /tags/
 category_archive:
-  type: jekyll-archives
-  path: /
-jekyll-archives:
-  enabled:
-    - categories
-    - tags
-  layouts:
-    category: archive-taxonomy
-    tag: archive-taxonomy
-  permalinks:
-    category: /:name/
-    tag: /tags/:name/
+  type: liquid
+  path: /categories/
+
+# tag_archive:
+#   type: jekyll-archives
+#   path: /tags/
+# category_archive:
+#   type: jekyll-archives
+#   path: /
+# jekyll-archives:
+#   enabled:
+#     - categories
+#     - tags
+#   layouts:
+#     category: archive-taxonomy
+#     tag: archive-taxonomy
+#   permalinks:
+#     category: /:name/
+#     tag: /tags/:name/
 
 
 # HTML Compression
