--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+_site
 *.gem
 *.sublime-project
 *.sublime-workspace
@@ -12,3 +13,4 @@ example/_site
 Gemfile.lock
 node_modules
 npm-debug.log*
+test-push.sh
