--- a/_config.yml
+++ b/_config.yml
@@ -216,7 +216,7 @@ tag_archive:
   type: liquid
   path: /tags/
 category_archive:
-  type: jekyll-archives
+  type: liquid
   path: /
 # # https://github.com/jekyll/jekyll-archives
 jekyll-archives:
