--- a/_config.yml
+++ b/_config.yml
@@ -88,7 +88,7 @@ author:
   avatar           : "https://www.gravatar.com/avatar/763a2074e6b54615855a13656f2cb717" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "Freelance Developer experienced in Data Science and Decentralized Applications."
   location         : "New Delhi, India"
-  email            : "satwikkansal@gmail.com"
+  email            : "discuss@satwikkansal.xyz"
   uri              : "http://satwikkansal.xyz"
   codepen          :
   dribbble         :
