--- a/_config.yml
+++ b/_config.yml
@@ -179,7 +179,7 @@ sass:
 
 # Outputting
 permalink: /posts/:categories/:title/
-paginate: 8 # amount of posts to show
+paginate: 9 # amount of posts to show
 paginate_path: /page:num/
 timezone: "Asia/Kolkata" # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
@@ -259,4 +259,5 @@ defaults:
       read_time: true
       comments: false
       share: true
+      weight: 1
 related: true
