A bit of restructure.

--- a/_config.yml
+++ b/_config.yml
@@ -179,7 +179,7 @@ sass:
 
 # Outputting
 permalink: /posts/:categories/:title/
-paginate: 9 # amount of posts to show
+paginate: 20 # amount of posts to show
 paginate_path: /page:num/
 timezone: "Asia/Kolkata" # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
@@ -257,7 +257,7 @@ defaults:
       layout: single
       author_profile: true
       read_time: true
-      comments: false
+      comments: true
       share: true
       weight: 1
 related: true
