Use https in uri

--- a/_config.yml
+++ b/_config.yml
@@ -89,7 +89,7 @@ author:
   bio              : "Freelance Developer experienced in Data Science and Decentralized Applications."
   location         : "New Delhi, India"
   email            : "discuss@satwikkansal.xyz"
-  uri              : "http://satwikkansal.xyz"
+  uri              : "https://satwikkansal.xyz"
   codepen          :
   dribbble         :
   flickr           :
