--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ analytics:
 author:
   name             : "Satwik Kansal"
   avatar           : "https://www.gravatar.com/avatar/763a2074e6b54615855a13656f2cb717" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "Freelance Developer experienced in Data Science and Decentralized Applications."
+  bio              : "Creative Technologist. Experienced with Data Science and Distributed Applications."
   location         : "New Delhi, India"
   email            : "discuss@satwikkansal.xyz"
   uri              : "https://satwikkansal.xyz"
