Make slight changes

--- a/_config.yml
+++ b/_config.yml
@@ -96,7 +96,7 @@ analytics:
 author:
   name             : "Satwik Kansal"
   avatar           : "https://www.gravatar.com/avatar/763a2074e6b54615855a13656f2cb717" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "Freelancer. I love tinkering with emerging technologies and working on ambitious ideas."
+  bio              : "Freelancer. I love tinkering with emerging technologies and working on cool ideas. Also building stych.social and hop23.xyz"
   location         : "India"
   email            : "discuss@satwikkansal.xyz"
   links:
